@@ -14,6 +14,9 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Fixed the errors and value corruption when trying to re-open the
+          - "Background Image" window.
+
 * [DanielPharos]: Changes to get VMT files working again under the new Steam file layout.
 
 * [DanielPharos]: Fixed DLL hijacking vulnerability on Windows XP SP1 and later.
